Mejora el estilo de la calculadora y agrega soporte para operaciones de raíz cuadrada y potencia

--- a/app/calculadora.html
+++ b/app/calculadora.html
@@ -14,8 +14,10 @@
             <div class="current-operand" id="current-operand">0</div>
         </div>
         <div class="buttons">
-            <button class="clear span-2">AC</button>
+            <button class="clear">AC</button>
             <button class="delete">DEL</button>
+            <button class="operator">√</button>
+            <button class="operator">^</button>
             <button class="operator">÷</button>
             <button>7</button>
             <button>8</button>
