Agrega botón para cambiar signo y soporte en la lógica de la calculadora

--- a/app/calculadora.html
+++ b/app/calculadora.html
@@ -31,6 +31,7 @@
             <button>2</button>
             <button>3</button>
             <button class="operator">+</button>
+            <button class="sign-change">+/-</button>
             <button>0</button>
             <button>.</button>
             <button class="equals">=</button>
