--- a/app/calculadora.html
+++ b/app/calculadora.html
@@ -16,25 +16,33 @@
         <div class="buttons">
             <button class="clear">AC</button>
             <button class="delete">DEL</button>
-            <button class="operator">√</button>
-            <button class="operator">^</button>
+
+            <button class="operator pi">π</button>
             <button class="operator">÷</button>
+            <button class="operator">×</button>
+
+            <button class="operator">1/x</button>
             <button>7</button>
             <button>8</button>
             <button>9</button>
-            <button class="operator">×</button>
+            <button class="operator">-</button>            
+
+            <button class="operator">√</button>            
             <button>4</button>
             <button>5</button>
             <button>6</button>
-            <button class="operator">-</button>
+            <button class="operator">+</button>
+
+            <button class="operator">^</button>         
             <button>1</button>
             <button>2</button>
-            <button>3</button>
-            <button class="operator">+</button>
+            <button>3</button>                        
+            <button class="equals">=</button>
+
+            <button class="operator">%</button>
             <button class="sign-change">+/-</button>
             <button>0</button>
-            <button>.</button>
-            <button class="equals">=</button>
+            <button>.</button>           
         </div>
     </div>
     <script src="/app/calculadora.js"></script>
