Agrega soporte para el botón de PI (π) y mejora la documentación en la clase de la calculadora

--- a/app/calculadora.html
+++ b/app/calculadora.html
@@ -8,11 +8,14 @@
 </head>
 <body>
     <h1 class="title">Calculadora</h1>
+    <!-- Contenedor principal de la calculadora -->
     <div class="calculator">
+        <!-- Área de visualización (display) -->
         <div class="display">
             <div class="previous-operand" id="previous-operand"></div>
             <div class="current-operand" id="current-operand">0</div>
         </div>
+        <!-- Panel de botones -->
         <div class="buttons">
             <button class="clear">AC</button>
             <button class="delete">DEL</button>
