--- a/app/calculadora.html
+++ b/app/calculadora.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
     <link rel="stylesheet" href="/app/calculadora.css">
+    <link rel="icon" type="image/png" href="/app/imagen/calculator.png">
 </head>
 <body>
     <h1 class="title">Calculadora</h1>
