--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
-    <link rel="stylesheet" href="/app/calculadora.css">
-    <link rel="icon" type="image/png" href="/app/imagen/calculator.png">
+    <link rel="stylesheet" href="/calculadora.css">
+    <link rel="icon" type="image/png" href="/imagen/calculator.png">
 </head>
 <body>
     <h1 class="title">Calculadora</h1>
@@ -49,6 +49,6 @@
             <button>.</button>           
         </div>
     </div>
-    <script src="/app/calculadora.js"></script>
+    <script src="/calculadora.js"></script>
 </body>
 </html>
