Corrige rutas de archivos CSS y JavaScript en index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
-    <link rel="stylesheet" href="/app/calculadora.css">
+    <link rel="stylesheet" href="app/calculadora.css">
     <link rel="icon" type="image/png" href="/imagen/calculator.png">
 </head>
 <body>
@@ -49,6 +49,6 @@
             <button>.</button>           
         </div>
     </div>
-    <script src="/app/calculadora.js"></script>
+    <script src="app/calculadora.js"></script>
 </body>
 </html>
