Corrige ruta del icono en index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
     <link rel="stylesheet" href="app/calculadora.css">
-    <link rel="icon" type="image/png" href="/imagen/calculator.png">
+    <link rel="icon" type="image/png" href="imagen/calculator.png">
 </head>
 <body>
     <h1 class="title">Calculadora</h1>
